src/test/ui/regions/regions-close-object-into-object-5.base.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/regions-close-object-into-object-5.rs:13:17
   |
LL | struct B<'a, T: 'a>(&'a (A<T> + 'a));
   |                 ^^
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:5
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |     ^^^^^^^^^^^^^^^^ ...so that the type `B<'_, T>` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:14
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |              ^ ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/regions-close-object-into-object-5.rs:13:17
   |
LL | struct B<'a, T: 'a>(&'a (A<T> + 'a));
   |                 ^^
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:14
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |              ^^^^^^ ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/regions-close-object-into-object-5.rs:13:17
   |
LL | struct B<'a, T: 'a>(&'a (A<T> + 'a));
   |                 ^^
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:16
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |                ^^^ ...so that the reference type `&dyn A<T>` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:16
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |                ^^^ ...so that the type `(dyn A<T> + 'static)` is not borrowed for too long
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:21:16
   |
LL |     Box::new(B(&*v)) as Box<dyn X>
   |                ^^^ ...so that the type `(dyn A<T> + 'static)` is not borrowed for too long
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn f<'a, T: 'static, U>(v: Box<A<T> + 'static>) -> Box<X + 'static> {
   |           +++++++++

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0310`.
